Залил 5 Дз upd 1

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <nav>
         <ul class="sign_menu">
-            <li class="sign_item"><a href="">Ola! Entrar ou Cadastre-se</a></li>
-            <li class="sign_item"><a href="">Minhas Ofertas</a></li>
-            <li class="sign_item"><a href=""><img src="img/flag.png" alt="flag"></a></li>
+            <li class="sign_item">Ola! <a href="#">Entrar</a> ou <a href="#">Cadastre-se</a></li>
+            <li class="sign_item none_decore"><a href="#">Minhas Ofertas</a></li>
+            <li class="sign_item"><a href="#"><img src="img/flag.png" alt="flag"></a></li>
         </ul>
         <ul class="navbar clear-fix">
             <li class="navbar_item line"><a href="#">Ajuda</a></li>
