Залил 5 Дз upd 2

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <li class="input_field"><input type="email" placeholder="Email Address"></li>
                 <li class="input_field"><input type="password" placeholder="Choose Password"></li>
                 <li class="input_field"><input type="password" placeholder="Password Confirm"></li>
-                <li class="accept_box"><input type="checkbox" name="accept">Send me Youbike updates and tips<Br></li>
+                <li class="accept_box"><input type="checkbox" id="checkbox"><label for="checkbox">Send me Youbike updates and tips</label></li>
                 <li class="input_field accept_bottom"><input type="submit" value="Create my Account"></li>
                 <li class="agree">By clicking the button above, you agree to the Terms of Service</li>
                 <li class="Privacy_Policy"><a href="#">View our Privacy Policy</a></li>
